--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="box1">
         <div class="card-list">
             <div class="card-item active">
-                       <h1>HELLO, BẠN LÀ....?</h1>
+                       <h1>Chào em đến với thế giới nhỏ của anhh</h1>
 
-                <input type="Nhập tên của bạn..."class="input-1" name="" id="text1">
+                <input type="Nhập tên của bạn..."class="input-1" name="" id="text1" placeholder="Please type your name..">
                 <div class="button">
                         <button onclick="nextSlide()" type="submit" class="btn-sub" id="enter">Tiếp nèe</button>
                         <button onclick="nextSlide()" type="submit" id="exit1"class="btn-sub">EXIT</button>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="card-item" id="card-item1">
-                <h2>Welcomee special person </h2>
+                <h2>Welcomee a special person </h2>
 
                  <i onclick="nextSlide()" class="fa-solid fa-gift" style="color: #df3ab3;" id="icon2"></i> 
                  
